[package]
name = "sovran-arc"
version = "0.1.0"
edition = "2021"
authors = ["Dr Sneed <drsneed@sovran.la>"]
description = "Memory management swift-isms brought to Rust"
repository = "https://github.com/sovran-rs/sovran-arc"
license = "MIT"
readme = "README.md"
keywords = ["memory", "arc", "concurrency", "swift"]
categories = ["concurrency", "memory-management"]

[dependencies]
# none
