[package]
name = "sovran-arc"
version = "0.1.3"
edition = "2021"
authors = ["Sovran.la <support@sovran.la>"]
description = "Memory management swift-isms brought to Rust"
repository = "https://github.com/sovran-rs/sovran-arc"
license = "MIT"
readme = "README.md"
keywords = ["memory", "arc", "concurrency", "swift"]
categories = ["concurrency", "memory-management"]

[dependencies]
toml_edit = "0.22"

[[bin]]
name = "release"
path = "tools/release.rs"
